# CAOS_SIMLAB

./: .env.example  .gitattributes  .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-precompute.txt  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
docs/: ARCHITECTURE.md  README.md  architecture.md  frameworks.md  guides.md  problem-types.md  use-cases.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  05_precompute-pipeline.md  06_live-tool-evaluation.md  07_deploy.md
docs/frameworks/: 01_simpy.md  02_ciw.md  03_salabim.md  04_mesa.md  05_mesa-geo.md  06_jupedsim.md  07_netlogo-web.md  08_ortools.md  09_pyvrp.md  10_networkx.md  11_osmnx.md  12_joblib.md  13_scipy-stats.md  14_numba.md  15_cupy.md  16_taichi.md  17_jax.md  18_gpu-abm-chapter.md
docs/guides/: 01_precompute-pipeline.md  gpu-lane.md  (+4 more)
manifests/: s01_queue.json  s02_schelling.json  s03_sir.json  s04_ed.json  s05_beergame.json  s06_jobshop.json  s07_haul.json  s08_vrp.json  s09_ambulance.json  s10_montecarlo.json  s11_minehaul.json
notebooks/: README.md
scripts/: precompute.ps1  precompute.sh  setup.ps1  setup.sh
simlab/: __init__.py  live.py  pipeline.py  registry.py
tests/: test_chart_scenarios.py  test_core.py  test_flow_gantt_scenarios.py  test_grid_scenarios.py  test_live.py  test_route_scenarios.py  test_s01_queue.py
web/: README.md  copy-data.mjs  index.html  package-lock.json  package.json  vite.config.ts
(+466 files in other folders)
