[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simlab"
# PEP 440 form of the display version 0.17.002 (scheme X.XX.XXX — see CHANGELOG.md + simlab.__version__).
version = "0.17.2"
description = "CAOS_SIMLAB — a public, didactic Discrete-Event Simulation, Agent-Based Modeling & Optimization lab."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26", "simpy>=4.1"]

[tool.setuptools]
packages = ["simlab", "simlab.core", "simlab.scenarios"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
